--- a/client-react/src/components/admin/Admin.css
+++ b/client-react/src/components/admin/Admin.css
@@ -5,31 +5,59 @@
 }
 
 #micro-services{
-
-    background-color:white;
+    background: #4D0B5A none no-repeat scroll 0 0;
     display: grid;
-    grid-template-columns: 100px 100px 100px;
+    column-count: 4;
     grid-template-rows: 100px 100px 100px;
-    gap: 3.9%;
+    gap: 3.5rem;
 }
 
 #micro-services h1{
     grid-row: 1;
     grid-column: 2/4;
+    color: #FFFFFF;
+    background: #4D0B5A;
+}
+#micro-services button{
+    background: #4D0B5A;
+    color: #FFFFFF;
 }
 #square{
     grid-row: 2;
     height: 140px;
     width: 140px;
-    background: black;
-    border: 20px rgb(36, 233, 233) double;
+    background: white;
+    border: 20px ridge #15f2d2;
+    border-radius: 94px;
     align-content: center;
     justify-content: center;
+    text-shadow: 8px 12px 6px #f5f5f0, 5px 5px 10px #ff0000;
+    text-align: center;
 
     
+}
+#square2{
+    grid-row: 2;
+    grid-column: 3/5;
+    height: 140px;
+    width: 340px;
+    background: white;
+    border: 20px ridge #15f2d2;
+    border-radius: 94px;
+    align-content: center;
+    justify-content: center;
+    text-shadow: 8px 12px 6px #f5f5f0, 5px 5px 10px #ff0000;
+    text-align: center;
+    
+}
+#square2 p {
+    grid-column:3;
+    padding: 10px;
+    color: black;
+   
 }
 #square p {
     grid-column:3;
     padding: 10px;
-    color: orange;
+    color: black;
 }
